# Machine_Learning_projet

./: .gitignore  EDA.ipynb  EDA_V3.ipynb  EDA_bon.ipynb  Modélisation_final.ipynb  Notebook_final.ipynb  Notebook_final_V2.ipynb  data_gathering.ipynb  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
