[project]
name = "machine-learning-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Tigran Gyurjyan",email = "tigran.gyurjyan.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "category-encoders (>=2.9.0,<3.0.0)",
    "optbinning (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
